--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.nshelloworld"
+    "id": "com.htmlui.nshelloworld"
   },
   "dependencies": {
     "nativescript-theme-core": "^0.2.1",
